--- a/WearNotifications/wear/src/main/AndroidManifest.xml
+++ b/WearNotifications/wear/src/main/AndroidManifest.xml
@@ -3,14 +3,18 @@
     package="com.ptrprograms.androidwearnotifications" >
 
     <uses-feature android:name="android.hardware.type.watch" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault" >
+
+        <uses-library android:name="com.google.android.wearable" android:required="false" />
+
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +25,12 @@
         <activity
             android:name="android.support.wearable.activity.ConfirmationActivity">
         </activity>
+
+        <activity android:name=".activities.DialogActivity" />
+
+        <activity android:name=".activities.GridViewPagerActivity" />
+
+        <activity android:name=".activities.DelayedConfirmationActivity" />
 
     </application>
 
